Entry Point and api organization Get Routes Operation
