# src/main/kotlin/pt/isel/ls/repository/RouteRepository.kt
@@ -1,0 +1,10 @@
+package pt.isel.ls.repository
+
+import pt.isel.ls.entities.Route
+
+interface RouteRepository {
+
+
+    fun getRoutes(): List<Route>
+
+}
