# src/main/kotlin/pt/isel/ls/repository/memory/RoutesDataMemRepository.kt
@@ -1,0 +1,14 @@
+package pt.isel.ls.repository.memory
+
+import pt.isel.ls.entities.Route
+import pt.isel.ls.repository.RouteRepository
+
+class RouteDataMemRepository: RouteRepository {
+
+    private val routesMap = mutableMapOf<RouteID, Route>()
+
+    override fun getRoutes(): List<Route> = routesMap.values.toList()
+
+}
+
+typealias RouteID = String
