# src/main/kotlin/pt/isel/ls/services/RouteServices.kt
@@ -1,0 +1,9 @@
+package pt.isel.ls.services
+
+import pt.isel.ls.repository.RouteRepository
+
+class RouteServices(val repository: RouteRepository){
+
+    fun getRoutes() = repository.getRoutes()
+
+}
